--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="library-content-followed">
+                        <!-- <div class="library-content-followed">
                             <div class="library-item" data-type="artist">
                                 <img
                                     src="placeholder.svg?height=48&width=48"
@@ -162,7 +162,7 @@
                                     <div class="item-subtitle">Artist</div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </nav>
             </aside>
